Add scripts for running the project

--- a/build-app/src/app/app.component.html
+++ b/build-app/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <h1 class="title">
-    {{ title }}
+    {{ appInfo.name }} v{{appInfo.version}}
   </h1>
 
   <form class="form-inline set-build" (keyup.enter)="setNewBuild(newBuild)">
